ad button forms iframe

--- a/Website/meta_tags.html
+++ b/Website/meta_tags.html
@@ -2,7 +2,7 @@
 <html lang="en">
 <head>
     <title>Meta Tags</title>
-
+    <meta charset="UTF-8">
     <meta name="description" content="Netsh is very cool">
     <meta name="keywords" content="HTML, Netsh, Cool Person">
     <meta name="author" content="Netsh Store">
@@ -10,6 +10,7 @@
     
 </head>
 <body>
-    
+    <h4>Netsh Store</h4>
+    <img src="/Logo/Netsh_Logo.png" alt="Netsh Logo" height="200" title="Netsh Logo">
 </body>
 </html>
